--- a/dlsite-doujin-2.html
+++ b/dlsite-doujin-2.html
@@ -138,7 +138,7 @@ header {
 
 
 
-<b><p><font size="7">シチュエーション/系統</font></p></b>
+<b><p><font size="7">シチュエーション/系統1</font></p></b>
 
 
 <br><b><p><font size="5">SF</font></p></b><br>
@@ -237,105 +237,10 @@ header {
 <script type="text/javascript">blogparts={"id":"9468","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <script type="text/javascript">blogparts={"id":"9469","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<br><b><p><font size="5">同棲</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9470","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9471","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br><br>
+<a href="dlsite-doujin-2-2.html"><b><p><font size="5">＞</font></p></b></a>
 
-<br><b><p><font size="5">歳の差</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9472","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9473","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">女体化</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9474","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9475","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">寝取られ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9476","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9477","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">寝取り</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9478","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9479","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ノンフィクション/体験談</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9480","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9481","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ハーレム</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9482","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9483","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">バイオレンス</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9484","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9485","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">売春/援交</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9486","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9487","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">初体験</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9488","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9489","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">憑依</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9490","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9491","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ファンタジー</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9492","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9493","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">風俗/ソープ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9494","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9495","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ほのぼの</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9496","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9497","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ホラー</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9498","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9499","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">魔法</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9500","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9501","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">丸呑み</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9502","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9503","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ミステリー</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9504","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9505","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">耳かき</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9506","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9507","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ミリタリー</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9508","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9509","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">百合</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9510","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9511","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ラブコメ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9512","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9513","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ラブラブ/あまあま</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9514","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9515","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">料理/グルメ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9516","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9517","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">歴史/時代物</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9518","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9519","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br>
 
       </div>
     <div class="right-navi">
