--- a/dlsite-doujin-3.html
+++ b/dlsite-doujin-3.html
@@ -136,7 +136,7 @@ header {
     	<div class="main-contents">
         <br><br><br><br><br><br><br><b><p><font size="5">DLsiteのおすすめ同人</font></p></b><br><br><br>
 
-<b><p><font size="7">プレイ/えっち傾向</font></p></b>
+<b><p><font size="7">プレイ/えっち傾向1</font></p></b>
 
 
 <br><b><p><font size="5">SM</font></p></b><br>
@@ -267,137 +267,10 @@ header {
 <script type="text/javascript">blogparts={"id":"9583","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <script type="text/javascript">blogparts={"id":"9584","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<br><b><p><font size="5">出産</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9585","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9586","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br><br>
+<a href="dlsite-doujin-3-2.html"><b><p><font size="5">＞</font></p></b></a>
 
-<br><b><p><font size="5">触手</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9587","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9588","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">焦らし</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9590","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9591","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">睡眠姦</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9592","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9593","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">スカトロ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9594","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9595","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">スパンキング</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9596","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9597","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">洗脳</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9598","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9599","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">男性受け</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9600","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9601","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">痴漢</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9602","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9603","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">蟲姦</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9604","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9605","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">調教</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9606","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9607","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">手コキ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9608","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9609","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">盗撮</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9610","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9611","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">奴隷</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9612","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9613","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">中出し</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9614","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9615","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">尿道</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9616","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9617","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">妊娠/孕ませ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9618","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9619","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ノーマルプレイ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9620","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9621","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">パイズリ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9622","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9623","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">フェラチオ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9624","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9625","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">複数プレイ/乱交</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9626","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9627","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ぶっかけ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9628","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9629","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">放置プレイ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9630","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9631","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">放尿/おしっこ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9632","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9633","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">母乳</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9634","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9635","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">耳舐め</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9636","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9637","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">モブ姦</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9638","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9639","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">陵辱</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9640","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9641","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">輪姦</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9642","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9643","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">レイプ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9644","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9645","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">レズ/女同士</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9646","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9647","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">露出</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9648","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9649","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">和姦</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9650","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9651","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br>
 
       </div>
     <div class="right-navi">
