--- a/fannza-anime.htm
+++ b/fannza-anime.htm
@@ -138,9 +138,9 @@ header {
 
 <a href="fanza-anime-1.html"><b><p><font size="5">シチュエーション
 </font></p></b></a>
-<br><a href="fanza-anime-2.html"><b><p><font size="5">タイプ
+<br><a href="fanza-anime-2.html"><b><p><font size="5">タイプ/身体的特徴
 </font></p></b></a>
-<br><a href="fanza-anime-3.html"><b><p><font size="5">コスチューム
+<br><a href="fanza-anime-3.html"><b><p><font size="5">コスチューム/服装/アイテム
 </font></p></b></a>
 <br><a href="fanza-anime-4.html"><b><p><font size="5">ジャンル
 </font></p></b></a>
