--- a/fannza-av.html
+++ b/fannza-av.html
@@ -139,9 +139,9 @@ header {
 
 <a href="fanza av-1.html"><b><p><font size="5">シチュエーション
 </font></p></b></a>
-<br><a href="fanza av-2.html"><b><p><font size="5">タイプ
+<br><a href="fanza av-2.html"><b><p><font size="5">タイプ/身体的特徴
 </font></p></b></a>
-<br><a href="fanza av-3.html"><b><p><font size="5">コスチューム
+<br><a href="fanza av-3.html"><b><p><font size="5">コスチューム/服装/アイテム
 </font></p></b></a>
 <br><a href="fanza av-4.html"><b><p><font size="5">ジャンル
 </font></p></b></a>
