--- a/dlsite-doujin-1.html
+++ b/dlsite-doujin-1.html
@@ -214,7 +214,7 @@ header {
 <script type="text/javascript">blogparts={"id":"9378","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br>
-<a href="dlsite-doujin-1-2.html"><b><p><font size="5">＞</font></p></b></a>
+<a href="dlsite-doujin-1-2.html"><b><p><font size="7">こだわり/アピール2へ＞</font></p></b></a>
 
 <br>
       </div>
