--- a/dlsite-doujin-2.html
+++ b/dlsite-doujin-2.html
@@ -238,7 +238,7 @@ header {
 <script type="text/javascript">blogparts={"id":"9469","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br>
-<a href="dlsite-doujin-2-2.html"><b><p><font size="5">＞</font></p></b></a>
+<a href="dlsite-doujin-2-2.html"><b><p><font size="7">シチュエーション/系統2へ＞</font></p></b></a>
 
 <br>
 
