--- a/dlsite-doujin-5.html
+++ b/dlsite-doujin-5.html
@@ -272,7 +272,7 @@ header {
 <script type="text/javascript">blogparts={"id":"9734","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br>
-<a href="dlsite-doujin-5-2.html"><b><p><font size="5">＞</font></p></b></a>
+<a href="dlsite-doujin-5-2.html"><b><p><font size="7">キャラクター/衣装2へ＞</font></p></b></a>
 
 <br>
 
