--- a/dlsite-doujin-5-2.html
+++ b/dlsite-doujin-5-2.html
@@ -263,7 +263,7 @@ header {
 <script type="text/javascript">blogparts={"id":"9796","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br>
-<a href="dlsite-doujin-5-3.html"><b><p><font size="5">＞</font></p></b></a>
+<a href="dlsite-doujin-5-3.html"><b><p><font size="7">キャラクター/衣装3へ＞</font></p></b></a>
 
 <br>
 
