--- a/fukusyu-no-oltudoaizu-home-m.html
+++ b/fukusyu-no-oltudoaizu-home-m.html
@@ -137,12 +137,8 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href="xx.htm"><img src="manga_R.jpg"width=: auto; height=100% alt="漫画"></a>
-<a href="xx.htm"><img src="小説_R.jpg"width=: auto; height=100% alt="小説"></a>
-<a href="xx.htm"><img src="イラスト_R.jpg"width=: auto; height=100% alt="イラスト"></a>
-<a href="xx.htm"><img src="商品_R.jpg"width=: auto; height=100% alt="商品"></a>
-<a href="xx.htm"><img src="おすすめ_R.jpg"width=: auto; height=100% alt="おすすめ"></a>
-<a href="xx.htm"><img src="プロフィール_R.jpg"width=: auto; height=100% alt="プロフィール"></a>
+<a href="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+
 
 
 
