Update 1manga-home .html

--- a/1manga-home .html
+++ b/1manga-home .html
@@ -136,7 +136,7 @@ header {
         <br><br><br><br><br><br><br>
 
 <b><p><font size="5">漫画</font></p></b>
-<a href="/aaa/bbb/ccc.html"><b><p><font size="5">復讐の異色眼兄妹～種付けして完全催眠～</font></p></b></a>
+<a href="fukusyu-no-oltudoaizu-home-m.html"><b><p><font size="5">復讐の異色眼兄妹～種付けして完全催眠～</font></p></b></a>
 
 
 
