--- a/1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1.html
+++ b/1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1.html
@@ -142,8 +142,8 @@ header {
 <b><p><font size="5">復讐の異色眼兄妹(オッドアイズ)～種付けして完全催眠～</font></p></b>
 <br><b><p><font size="5">1話 正義の虐殺と大義の強姦</font></p></b>
 
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (2).jpg"width=: auto; height=93% alt="わからん">
+<img src="1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1fukusyu-no-oltudoaizu-m1./fot1 (2).jpg"width=: auto; height=93% alt="わかりませぬ">
 <img src="1fukusyu-no-oltudoaizu-m1./fot1 (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1fukusyu-no-oltudoaizu-m1./fot1 (4).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1fukusyu-no-oltudoaizu-m1./fot1 (5).jpg"width=: auto; height=93% alt="イラスト">
