--- a/1manga-home.html
+++ b/1manga-home.html
@@ -136,7 +136,9 @@ header {
         <br><br><br><br><br><br><br>
 
 <b><p><font size="5">漫画</font></p></b>
-<a href="fukusyu-no-oltudoaizu-home-m.html"><b><p><font size="5">復讐の異色眼兄妹～種付けして完全催眠～</font></p></b></a>
+<a href="1fukusyu-no-oltudoaizu-m1.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=100% alt="漫画"></a>
+
+
 
 
 
