--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -143,15 +143,15 @@ header {
 <br><b><p><font size="5">1話 正義の虐殺と大義の強姦</font></p></b>
 
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=93% alt="スト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (2).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (3).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (4).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (5).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (6).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (7).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (8).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (9).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (10).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (3).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (4).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (5).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (6).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (7).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (8).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (9).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (10).jpg"width=: auto; height=93% alt="イラスト">
 
 <img src="1fukusyu-no-oltudoaizu-m1./fot1 (11).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1fukusyu-no-oltudoaizu-m1./fot1 (12).jpg"width=: auto; height=93% alt="イラスト">
