--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -143,7 +143,7 @@ header {
 <br><b><p><font size="5">1話 正義の虐殺と大義の強姦</font></p></b>
 
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=93% alt="スト">
-<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (4).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (5).jpg"width=: auto; height=93% alt="イラスト">
@@ -152,61 +152,61 @@ header {
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (8).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (9).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (10).jpg"width=: auto; height=93% alt="イラスト">
+		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (11).jpg"width=: auto; height=93% alt="スト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (12).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (13).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (14).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (15).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (16).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (17).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (18).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (19).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (20).jpg"width=: auto; height=93% alt="イラスト">	
 
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (11).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (12).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (13).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (14).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (15).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (16).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (17).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (18).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (19).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (20).jpg"width=: auto; height=93% alt="イラスト">
-
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (21).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (22).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (23).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (24).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (25).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (26).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (27).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (28).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (29).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (30).jpg"width=: auto; height=93% alt="イラスト">
-
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (31).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (32).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (33).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (34).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (35).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (36).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (37).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (38).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (39).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (40).jpg"width=: auto; height=93% alt="イラスト">
-
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (41).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (42).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (43).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (44).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (45).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (46).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (47).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (48).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (49).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (50).jpg"width=: auto; height=93% alt="イラスト">
-
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (51).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (52).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (53).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (54).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (55).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (56).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (57).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (58).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (59).jpg"width=: auto; height=93% alt="イラスト">
-<img src="1fukusyu-no-oltudoaizu-m1./fot1 (60).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (21).jpg"width=: auto; height=93% alt="スト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (22).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (23).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (24).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (25).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (26).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (27).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (28).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (29).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (30).jpg"width=: auto; height=93% alt="イラスト">
+		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (31).jpg"width=: auto; height=93% alt="スト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (32).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (33).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (34).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (35).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (36).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (37).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (38).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (39).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (40).jpg"width=: auto; height=93% alt="イラスト">
+		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (41).jpg"width=: auto; height=93% alt="スト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (42).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (43).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (44).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (45).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (46).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (47).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (48).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (49).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (50).jpg"width=: auto; height=93% alt="イラスト">
+		
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (51).jpg"width=: auto; height=93% alt="スト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (52).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (53).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (54).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (55).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (56).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (57).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (58).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (59).jpg"width=: auto; height=93% alt="イラスト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">		
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
