--- a/1fukusyu-no-oltudoaizu-m1.html
+++ b/1fukusyu-no-oltudoaizu-m1.html
@@ -144,6 +144,7 @@ header {
 
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (1).jpg"width=: auto; height=93% alt="スト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (2).jpg"width=: auto; height=93% alt="イト">
+<img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (60).jpg"width=: auto; height=93% alt="イラスト">		
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (4).jpg"width=: auto; height=93% alt="イラスト">
 <img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot1 (5).jpg"width=: auto; height=93% alt="イラスト">
