--- a/fukusyu-no-oltudoaizu-home-s.html
+++ b/fukusyu-no-oltudoaizu-home-s.html
@@ -146,10 +146,59 @@ header {
 しかし、とある事件をきっかけに2人は全てに対しての復讐を始める。<br />
 
 <br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html"><b><p><font size="5">1話 隔離された平和な村 ヒロイック村(♡1)</font></p></b></a>
-
-
-
-
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s2.html"><b><p><font size="5">2話 正義の虐殺と大義の強姦(♡3)</font></p></b></a>	
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html"><b><p><font size="5">3話 ヒロイック村を背負いし兄妹(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s4.html"><b><p><font size="5">4話 女性だけの国へ〜褐色の王との交わり〜(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s5.html"><b><p><font size="5">5話 俺たちの居場所レジスト国〜全員を孕ませよ〜(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s6.html"><b><p><font size="5">6話 リンクネクトへ 〜実験の準備〜(♡2)</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s7.html"><b><p><font size="5">7話 リンクネクトでの実験〜肉体改造〜(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s8.html"><b><p><font size="5">8話 訓練施設での朝と姉弟(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s9.html"><b><p><font size="5">9話 抱いてはいけない気持ちと人妻の罪(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s10.html"><b><p><font size="5">10話 人妻と命の略奪（♡3）</font></p></b></a>
+		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s11.html"><b><p><font size="5">11話 事件現場より快楽を クエストより快感を（♡3）</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s12.html"><b><p><font size="5">12話 国おこしの計画(♡3)</font></p></b></a>	
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s13.html"><b><p><font size="5">13話『グローズ』と討伐クエスト(♡1)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s14.html"><b><p><font size="5">14話『グローズ』とのクエスト帰りに性行為を(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s15.html"><b><p><font size="5">15話 帰りの馬車内での性欲処理とリオと(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s16.html"><b><p><font size="5">16話 受付嬢と飲食店デート 〜トイレで店員に種付けを〜（♡3）</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s17.html"><b><p><font size="5">17話 偽りの告白で店内で〜前は精液、後ろはメープルシロップ〜(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s18.html"><b><p><font size="5">18話 俺の宿屋〜メイドの舌で身体を洗い、ハーレム乱交を〜(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s19.html"><b><p><font size="5">19話 レジスト国の準備とおにぃちゃんのベッドで自慰行為(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s20.html"><b><p><font size="5">20話 俺の子を孕みたいのなら、金と手駒を〜ギルドの奥の部屋で〜(♡3)</font></p></b></a>
+		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s21.html"><b><p><font size="5">21話 温泉でリオとイチャイチャ孕まセックス〜ボディソープで身体を重ね合う〜(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s22.html"><b><p><font size="5">22話 湯船でリオのアナルに中出しとリンクネクトに着いた姉弟(♡2)</font></p></b></a>	
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s23.html"><b><p><font size="5">23話 姉弟で寝るか兄妹でヤるか(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s24.html"><b><p><font size="5">24話 椅子で拘束されたリベルは</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s25.html"><b><p><font size="5">25話 地下奴隷収容所のしくみとレズの探偵(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s26.html"><b><p><font size="5">26話 脱出は不可能！ 地下奴隷施設！！(♡2)</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s27.html"><b><p><font size="5">27話 地下奴隷収容所での食事、そして帝国所属・ライズ国へ</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s28.html"><b><p><font size="5">28話 マキシード王の足に射精を、尻穴に口付けを(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s29.html"><b><p><font size="5">29話 マキシード王の食器となりて、男体盛りを(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s30.html"><b><p><font size="5">30話 女性器の中の刺身を愛液で食す〜葡萄酒を尿に濾過せよ〜(♡2)</font></p></b></a>
+		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s31.html"><b><p><font size="5">31話 お待たせしました俺のペニスのチョコレートフォンデュです(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s32.html"><b><p><font size="5">32話 そのディルドで俺の尻穴を責めてくださいっ！(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s33.html"><b><p><font size="5">33話 姉弟でお土産選びデート(♡1)</font></p></b></a>	
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s34.html"><b><p><font size="5">34話 リダ姉と飲食店デート</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s35.html"><b><p><font size="5">35話 貴族の妻と不倫子作りセックス(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s36.html"><b><p><font size="5">36話 海賊と帝国と(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s37.html"><b><p><font size="5">37話 睡眠逆レイプっ！ 貴様が寝ている間に子を孕んでやる(♡2)</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s38.html"><b><p><font size="5">38話 帝国所属国と帝国本部</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s39.html"><b><p><font size="5">39話 王子様(奴隷)とメイドの禁断の恋ごっこ(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s40.html"><b><p><font size="5">40話 女執事の話より、手コキを</font></p></b></a>
+		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s41.html"><b><p><font size="5">41話 王は会議中。奴隷とメイドは別室で子作りセックス(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s42.html"><b><p><font size="5">42話 メイド長は性奴隷(おれ)の肉便器(♡2)</font></p></b></a>	
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s43.html"><b><p><font size="5">43話 女執事の話より、その身体を 城下町の説明より、その身体を(♡1)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s44.html"><b><p><font size="5">44話 女執事に偽りの告白〜身分差の恋と欲〜</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s45.html"><b><p><font size="5">45話 女装をさせられ、女執事にディルドで突かれちゃうぅっ......(♡2)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s46.html"><b><p><font size="5">46話 女執事ヴァレットとのアナルセックス〜絶頂するその瞬間に〜</font></p></b></a>		
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s47.html"><b><p><font size="5">47話 メイド長と女執事と俺とのご褒美3Pセックス(♡3)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s48.html"><b><p><font size="5">48話 女王様もいかがです？〜快楽に溺れる4Pハーレムセックス〜</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s49.html"><b><p><font size="5">49話 大好きな妹メイドとのえっち 〜おにぃちゃんの心は私だけのものだよ〜</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s50.html"><b><p><font size="5">50話 姉弟と純白騎士団長</font></p></b></a>
 
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
