--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
@@ -140,6 +140,8 @@ header {
 
 <br><b><p><font size="5">1話 隔離された平和な村 ヒロイック村(♡1)</font></p></b>
 
+<ins class="dmm-widget-placement" data-id="44c6ac7dfecad420f6bfdca318b3b247" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="44c6ac7dfecad420f6bfdca318b3b247"></script>
+
 <p id="L1">魔王が『勇者』に討伐されてから300年以上の月日が流れた。</p>
 <p id="L2"><br /></p>
 <p id="L3">勇者と呼ばれた者は自身の子孫を残し、そのものたちがこの世界を守り続けるであろうと思われた。</p>
@@ -244,6 +246,7 @@ header {
 <p id="L104">「うい。 じゃあ、行こうかリオ」</p>
 <p id="L105"><br /></p>
 <p id="L106">「うん！」</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L107"><br /></p>
 <p id="L108"><br /></p>
 <p id="L109">・</p>
@@ -296,6 +299,7 @@ header {
 <p id="L156">「じゃあ、行こっか♪」</p>
 <p id="L157"><br /></p>
 <p id="L158">「あ、あぁ」</p>
+<ins class="dmm-widget-placement" data-id="dd948c174f97cd9de30fe60cd619ac6e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="dd948c174f97cd9de30fe60cd619ac6e"></script>
 <p id="L159"><br /></p>
 <p id="L160"><br /></p>
 <p id="L161">・</p>
@@ -376,6 +380,7 @@ header {
 <p id="L236"><br /></p>
 <p id="L237">多分、人に言いづらい理由があるのだろう。</p>
 <p id="L238">これ以上聞くというのはやっぱりまずいな。</p>
+<ins class="dmm-widget-placement" data-id="79e3f5a8f957cdf55049110c0fe28933" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="79e3f5a8f957cdf55049110c0fe28933"></script>
 <p id="L239"><br /></p>
 <p id="L240"><br /></p>
 <p id="L241">・</p>
@@ -495,6 +500,14 @@ header {
 <p id="L356"><br /></p>
 <p id="L357">「そ、外は！！ さっきから聞こえる声は！？」</p>
 <p id="L358"><br /></p>
+<br>漫画版
+<br><br>ファンザ 880円
+<br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_228366%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=text" rel="nofollow">復讐の異色眼兄妹〜種付けして完全催●〜 正義の虐殺と大義の強●</a>
+<br>DLサイト 880円
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ384292.html" target="_blank">復讐の異色眼兄妹～種付けして完全催眠～ 正義の虐殺と大義の強姦</a>
+<br>無料　線画のみ
+<br>上の「漫画manga」をクリック
+<script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
 <a href="fukusyu-no-oltudoaizu-s2.html"><b><p><font size="5">＞</font></p></b></a>	
