--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s2.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s2.html
@@ -139,6 +139,7 @@ header {
 <br>小さい見た目の女の子もレイプ
 
 <br><b><p><font size="5">2話 正義の虐殺と大義の強姦(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">家の扉から見える外はまさに地獄絵図だった。</p>
 <p id="L2">純白のフルプレートアーマーを付けているものたちが、次々と人々を虐殺していたのだ。</p>
@@ -286,6 +287,7 @@ header {
 <p id="L144"><br /></p>
 <p id="L145">俺たちは何も出来ない。</p>
 <p id="L146">ただ、眺めているだけだ。</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L147"><br /></p>
 <p id="L148">1人の女は男2人に挟まれるように、ただ、男の欲を満たすためだけの道具として、激しく腰を打ち付けられる。</p>
 <p id="L149"><br /></p>
@@ -381,6 +383,7 @@ header {
 <p id="L239">1人終われば別の1人がやってくる。</p>
 <p id="L240"><br /></p>
 <p id="L241">終わる事なき乱暴な性行為だが、女はメスとしての本能、あるいは、自己防衛本能により、それら全てを快楽へと書き換える。</p>
+<ins class="dmm-widget-placement" data-id="490d44b21b7fb24ee244a9ec1d2ee47e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="490d44b21b7fb24ee244a9ec1d2ee47e"></script>
 <p id="L242"><br /></p>
 <p id="L243"><br /></p>
 <p id="L244">・</p>
@@ -472,6 +475,8 @@ header {
 <p id="L330"><br /></p>
 <p id="L331">男は少女からペニスを抜き、両手を離した。</p>
 <p id="L332">支えを無くした少女はドサッと地面にへと叩きつけられる。</p>
+<ins class="dmm-widget-placement" data-id="dd948c174f97cd9de30fe60cd619ac6e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="dd948c174f97cd9de30fe60cd619ac6e"></script>
+
 <p id="L333"><br /></p>
 <p id="L334"><br /></p>
 <p id="L335">・</p>
@@ -639,6 +644,7 @@ header {
 <p id="L497">だから、彼らには『罪悪感』など存在しない。</p>
 <p id="L498"><br /></p>
 <p id="L499">あるのは、国からの任務をクリアした『達成感』のみだ。</p>
+<ins class="dmm-widget-placement" data-id="79e3f5a8f957cdf55049110c0fe28933" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="79e3f5a8f957cdf55049110c0fe28933"></script>
 <p id="L500"><br /></p>
 <p id="L501"><br /></p>
 <p id="L502">かつては世界を救ったと称された『勇者』の末裔たちの住む村。</p>
@@ -701,6 +707,7 @@ header {
 <p id="L559"><br /></p>
 <p id="L560">しかし、リオに悟られる訳にはいかない。</p>
 <p id="L561">これ以上、リオを傷つけてはいけない。</p>
+<ins class="dmm-widget-placement" data-id="ca48494e24f2a740ace090723bd1a3fe" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ca48494e24f2a740ace090723bd1a3fe"></script>
 <p id="L562"><br /></p>
 <p id="L563"><br /></p>
 <p id="L564"><br /></p>
@@ -779,6 +786,14 @@ header {
 <p id="L637">それは『普通の生活を』</p>
 <p id="L638"><br /></p>
 <p id="L639">だが、2人にはもう届くことはない。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br>漫画版
+<br><br>ファンザ 880円
+<br><a href="https://al.dmm.co.jp/?lurl=https%3A%2F%2Fwww.dmm.co.jp%2Fdc%2Fdoujin%2F-%2Fdetail%2F%3D%2Fcid%3Dd_228366%2F&af_id=gesunayakito-001&ch=toolbar&ch_id=text" rel="nofollow">復讐の異色眼兄妹〜種付けして完全催●〜 正義の虐殺と大義の強●</a>
+<br>DLサイト 880円
+<br><a rel="noopener sponsored" href="https://www.dlsite.com/maniax/dlaf/=/t/n/link/work/aid/gesunayakitori/id/RJ384292.html" target="_blank">復讐の異色眼兄妹～種付けして完全催眠～ 正義の虐殺と大義の強姦</a>
+<br>無料　線画のみ
+<br>上の「漫画manga」をクリック
 
 <br><br><a href="fukusyu-no-oltudoaizu-s1.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
