--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s3.html
@@ -140,6 +140,7 @@ header {
 <br>近親相姦ってやつですな！
 
 <br><b><p><font size="5">3話 ヒロイック村を背負いし兄妹(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">俺の家の中に何か残って残ってはいないかと、瓦礫の山を探していると、ボロボロとなった俺のベッドを見つけた。</p>
 <p id="L2"><br /></p>
@@ -210,6 +211,7 @@ header {
 <p id="L67">成長していくうちに。</p>
 <p id="L68"><br /></p>
 <p id="L69">この気持ちが恋だと気づいたのだ。</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L70"><br /></p>
 <p id="L71"><br /></p>
 <p id="L72">「リオ、俺達の子ども......作ろっか」</p>
@@ -397,7 +399,7 @@ header {
 <p id="L254"><br /></p>
 <p id="L255">ズズズッッ</p>
 <p id="L256"><br /></p>
-<p id="L257"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i340324/" target="_blank">【挿絵表示】</a></p>
+<p id="L257"><br /></p>
 <p id="L258"><br /></p>
 <p id="L259">さらに、そのペニスをリオは大きな胸ではさみ、上下に激しく動かし始めたのだ。</p>
 <p id="L260"><br /></p>
@@ -716,8 +718,9 @@ header {
 <p id="L573">どぷっ、どぷっ、どぷっ......！！</p>
 <p id="L574"><br /></p>
 <p id="L575">俺は絶頂を迎えると同時にリオの唇に唇を強く重ね合わせた！</p>
+<ins class="dmm-widget-placement" data-id="490d44b21b7fb24ee244a9ec1d2ee47e" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="490d44b21b7fb24ee244a9ec1d2ee47e"></script>
 <p id="L576"><br /></p>
-<p id="L577"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i340325/" target="_blank">【挿絵表示】</a></p>
+<p id="L577"><br /></p>
 <p id="L578"><br /></p>
 <p id="L579"><br /></p>
 <p id="L580">ペニスから解き放たれた俺の精液はリオの膣内へと流れ込む！</p>
@@ -769,8 +772,10 @@ header {
 <p id="L626">その突然な変化に驚愕しなかった。</p>
 <p id="L627">むしろ、何か暖かく、懐かしい。</p>
 <p id="L628">そんな気までした。</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L629"><br /></p>
 <p id="L630">そして、俺たちの身体には、まるでこの村の全てが集まっているようなそんな気がしたんだ。</p>
+<script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s2.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
