--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s4.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s4.html
@@ -139,6 +139,7 @@ header {
 <br>やったね！
 
 <br><b><p><font size="5">4話 女性だけの国へ〜褐色の王との交わり〜(♡3)</font></p></b>
+<ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <p id="L1">現在、隣の森にいるわけだが、そこでも、俺たちは交わっていた。</p>
 <p id="L2"><br /></p>
@@ -221,6 +222,7 @@ header {
 <p id="L79">「お兄ちゃんなら出来る！！！」</p>
 <p id="L80"><br /></p>
 <p id="L81">「うっ、リオがいいなら......」</p>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
 <p id="L82"><br /></p>
 <p id="L83"><br /></p>
 <p id="L84">俺は、リオを連れて、あの国の門前へ移動する。</p>
@@ -259,7 +261,7 @@ header {
 <p id="L117"><br /></p>
 <p id="L118">後ろから声がしたので、その方へ振り向くと、黒をベースとした鎧で武装した騎士たち__もちろん全て女性__が並んでおり、その最前に、1人だけ特殊なヘルムを付けた騎士がいた。</p>
 <p id="L119"><br /></p>
-<p id="L120"><a href="//22108.mitemin.net/userpageimage/top/t/a1/icode/i340887/" target="_blank">【挿絵表示】</a></p>
+<p id="L120"><br /></p>
 <p id="L121"><br /></p>
 <p id="L122">先程の言葉の主はツバサ王と呼ばれたものであり、黒の鎧に真紅のマントを身につけたその女性から放たれたものだと推測される。</p>
 <p id="L123"><br /></p>
@@ -284,6 +286,7 @@ header {
 <p id="L142"><br /></p>
 <p id="L143">まぁ、とにかくまずは中に入れるようだ。</p>
 <p id="L144">俺とリオはツバサ王のあとに続く。</p>
+<ins class="dmm-widget-placement" data-id="5a0df315890a319e4cc4ccac3aab96a3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a0df315890a319e4cc4ccac3aab96a3"></script>
 <p id="L145"><br /></p>
 <p id="L146"><br /></p>
 <p id="L147">・</p>
@@ -336,6 +339,7 @@ header {
 <p id="L194">「......分かりました。 ではっ、少し、リオと相談してきます」</p>
 <p id="L195"><br /></p>
 <p id="L196">「あぁ、私はここで待っていよう......♡」</p>
+<ins class="dmm-widget-placement" data-id="9cc4a82fe35a53266b165394ccde8e8a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9cc4a82fe35a53266b165394ccde8e8a"></script>
 <p id="L197"><br /></p>
 <p id="L198">ツバサ王の部屋から出ると、リオが待っていた。</p>
 <p id="L199"><br /></p>
@@ -350,6 +354,7 @@ header {
 <p id="L208">「んっ、リオぉ......！！」</p>
 <p id="L209"><br /></p>
 <p id="L210">「ちゅっぽっ、ちゅっ、んっ。 はいっ......。ごめんねっ、これはお兄ちゃんにしか......できないからっ」</p>
+<ins class="dmm-widget-placement" data-id="269ae3ba985a848bbd0e2f04431859c6" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="269ae3ba985a848bbd0e2f04431859c6"></script>
 <p id="L211"><br /></p>
 <p id="L212">俺はリオと口付けを交わし、再び、ツバサ王の部屋へと戻る。</p>
 <p id="L213">扉を閉じると、ツバサ王は軽い服装で待っていた。</p>
@@ -671,6 +676,8 @@ header {
 <p id="L529">つまり、この国の女と子作りしろということだ。</p>
 <p id="L530"><br /></p>
 <p id="L531">「頼むぞっ！ リベル王っ！！」</p>
+
+<script type="text/javascript">blogparts={"id":"10533","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
 <br><br><a href="fukusyu-no-oltudoaizu-s3.html"><b><p><font size="5">＜</font></p></b></a>
 <a href="../../fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">index</font></p></b></a>
